src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CustomPicklist__c</fullName>
        <label>CustomPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomain__c</fullName>
        <description>Derived Email Domain from contact emails</description>
        <label>LD_EmailDomain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomains__c</fullName>
        <description>Derived Email Domains from contact emails</description>
        <label>LD_EmailDomains</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Has_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Marketing_Touch_Date__c</fullName>
        <label>Reporting Last Marketing Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Sales_Touch_Date__c</fullName>
        <label>Reporting Last Sales Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Recent_Marketing_Touches__c</fullName>
        <label>Reporting Recent Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account_Number__c</fullName>
        <formula>IF( LeanData__Reporting_Target_Account__c, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Target Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Leads_and_Contacts__c</fullName>
        <label>Reporting Total Leads and Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Sales_Touches__c</fullName>
        <label>Reporting Total Sales Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_1_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 1 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_1_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_2_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 2 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_2_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_3_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 3 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_3_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <description>LeanData search field</description>
        <label>LeanData Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a__c</fullName>
        <label>a</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>arpediomatrix__CurrentArpedioMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currrent matrix</label>
        <referenceTo>arpediomatrix__StakeHolderMap__c</referenceTo>
        <relationshipLabel>Matrixes</relationshipLabel>
        <relationshipName>AccountMatrixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>testFLS1__c</fullName>
        <label>testFLS1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field10__c</fullName>
        <label>test1dd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field10t__c</fullName>
        <label>test_field10t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field11__c</fullName>
        <label>test_field11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field11t__c</fullName>
        <label>test_field11t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field12__c</fullName>
        <label>test_field12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field12t__c</fullName>
        <label>test_field12t</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field15Clone1__c</fullName>
        <label>test_field15Clone1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field15tClone1__c</fullName>
        <label>test_field15tClone1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>test_field21t__c</columns>
        <columns>test_field22__c</columns>
        <columns>test_field22t__c</columns>
        <columns>test_field23__c</columns>
        <columns>test_field23t__c</columns>
        <columns>test_field24__c</columns>
        <columns>test_field24t__c</columns>
        <columns>test_field25__c</columns>
        <columns>test_field25t__c</columns>
        <columns>test_field26__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>test_field24__c</field>
            <operation>equals</operation>
            <value>asdfghkjhgfd</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>